fix: add top padding to modal content when retrying toast is visible
Pushes the song list down so the fixed-position toast at the top
of the page doesn't overlap the list.

--- a/src/css/request.css
+++ b/src/css/request.css
@@ -216,6 +216,9 @@
 }
 
 /* When retrying, fade out list/search/pagination so user can't re-request */
+#request-modal.retrying .request-modal-content {
+  padding-top: 3.5em;
+}
 #request-modal.retrying #request-list,
 #request-modal.retrying #request-search,
 #request-modal.retrying #request-prev,
